fixing size on iphone 7

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -251,6 +251,7 @@
           /* transform: scale(.5); */
           width: 500px;
           margin-left: 184px;
+          padding-left: 40px;
           margin-bottom: 112px;
           -webkit-background-size: cover;
           -moz-background-size: cover;
